# FlappyBird

./: CMakeLists.txt
src/: AssetManager.cpp  AssetManager.h  DEF.h  Game.cpp  Game.h  GameModel.cpp  GameModel.h  GameRenderer.cpp  GameRenderer.h  main.cpp
